# progressx

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
progressx/: __init__.py  cli.py  colors.py  manager.py  progress.py  spinner.py  utils.py
tests/: test_manager.py  test_progress.py  test_spinner.py
