[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "progressx"
version = "0.1.0"
description = "Lightweight Python CLI progress bars, spinners, and task manager"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hossein Tajfirouz", email = "hosseintajfirouz@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/ht21992/progressx"
Repository = "https://github.com/ht21992/progressx"
Issues = "https://github.com/ht21992/progressx/issues"

[project.scripts]
progressx = "progressx.cli:main"

[tool.setuptools.packages.find]
include = ["progressx*"]
